# fpga_egraph_cec

./: README.md  pyproject.toml  requirements.txt
configs/: exp_default.yaml
data/raw/benchmarks/: README.md  benchmarks.prepared.yaml  benchmarks.yaml
data/raw/benchmarks/arithmetic/: adder.blif  adder.v  adder.vhd  bar.blif  bar.v  bar.vhd  div.blif  div.v  div.vhd  log2.blif  log2.v  log2.vhd  max.blif  max.v  max.vhd  multiplier.v  multiplier.vhd  sin.blif  sin.v  sin.vhd  sqrt.v  sqrt.vhd  square.v  square.vhd
data/raw/benchmarks/best_results/: README.md
data/raw/benchmarks/prepared/: adder.aag  bar.aag  div.aag  log2.aag  max.aag  multiplier.aag  sin.aag  sqrt.aag  square.aag
data/raw/benchmarks/random_control/: arbiter.v  (+27 more)
data/results/: batch_all.csv  batch_all.json  batch_smoke.csv  batch_smoke.json
scripts/: collect_stats.py  prepare_benchmarks.py  run_batch.py  test_normalize.py
src/fpga_egraph_cec.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/fpga_egraph_cec/align/: aligner.py  matcher.py  signature.py
src/fpga_egraph_cec/bench/: loader.py  prepare.py
src/fpga_egraph_cec/egg/: circuit_terms.py  egglog_model.py  egglog_rules.py  egglog_translate.py  engine.py  expr.py  extract.py  model.py  normalize.py  rules.py  saturate.py  translate.py  translate_precise.py
src/fpga_egraph_cec/exp/: metrics.py  runner.py
src/fpga_egraph_cec/ir/: circuit.py  node.py  ops.py  serializer.py
src/fpga_egraph_cec/miters/: build.py  serialize.py
src/fpga_egraph_cec/parser/: aiger_parser.py
src/fpga_egraph_cec/verify/: abc_runner.py
(+33 files in other folders)
