[project]
name = "fpga-egraph-cec"
version = "0.1.0"
description = "Python-egglog assisted FPGA combinational equivalence checking prototype"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
  "pyyaml>=6.0",
  "pydantic>=2.0",
  "dataclasses-json>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
